--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <a id="payment" href="#">Proceed to Payment</a>
       <a id="cancel" href="#">Cancel Order</a>
-      
+
     </div>
     
   </main>
@@ -43,7 +43,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">J Stirpe</a>.
   </div>
 </body>
 </html>
