--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
   <main class="card">
-    <img id="banner-img" src="images/illustration-hero.svg">
+    <img id="banner-img" src="images/illustration-hero.svg" alt="banner">
 
     <div class="summary">
-      <h2>Order Summary</h2>
+      <h1>Order Summary</h1>
       <p class="description">You can now listen to millions of songs, audiobooks, and podcasts on any 
       device anywhere you like!</p>
       
@@ -25,7 +25,7 @@
         <img src="images/icon-music.svg" alt="Annual Plan">
 
         <div class="plan">
-          <h3>Annual Plan</h3>
+          <h2>Annual Plan</h2>
           <span class="price">$59.99/year</span>
         </div>
         
@@ -41,9 +41,12 @@
   </main>
   
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">J Stirpe</a>.
-  </div>
+  <aside>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">J Stirpe</a>.
+    </div>
+  </aside>
+  
 </body>
 </html>
